# AI-Watch-Tester

./: .gitignore  CONTRIBUTING.ko.md  CONTRIBUTING.md  LICENSE  Makefile  README.ko.md  README.md  pyproject.toml  render.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
cloud/: BACKUP_RECOVERY.md  Dockerfile  README.md  requirements.txt
cloud/app/: auth.py  auth_patterns.py  config.py  crawler.py  database.py  docparse.py  executor.py  health.py  main.py  middleware.py  models.py  scenario_utils.py  schemas.py  test_patterns.py  worker.py  ws.py
cloud/app/routers/: billing.py  documents.py  keys.py  scan.py  tests.py  v1.py
cloud/docs/: CI_CD_GUIDE.md  DEPLOYMENT.md
cloud/frontend/: README.md  package-lock.json  package.json
cloud/frontend/messages/: en.json  ko.json
cloud/frontend/public/: llms-full.txt  llms.txt  robots.txt
cloud/frontend/src/: middleware.ts
cloud/frontend/src/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  sitemap.ts
cloud/frontend/src/app/billing/: layout.tsx  page.tsx
cloud/frontend/src/app/dashboard/: page.tsx
cloud/frontend/src/app/login/: page.tsx
cloud/frontend/src/app/pricing/: layout.tsx  page.tsx
cloud/frontend/src/app/settings/: page.tsx
cloud/frontend/src/app/signup/: page.tsx
cloud/frontend/src/app/status/: layout.tsx  page.tsx
cloud/frontend/src/components/: AuthProvider.tsx  FileUpload.tsx  Header.tsx  HeroAnimation.tsx  LanguageToggle.tsx  ScenarioEditor.tsx  ScenarioViewer.tsx  TestProgress.tsx
cloud/frontend/src/i18n/: request.ts
cloud/frontend/src/lib/: api.ts  errorMessages.ts
cloud/scripts/: backup.sh  restore.sh
cloud/tests/: conftest.py  test_api_key_auth.py  test_api_keys.py  test_auth.py  test_daily_limit.py  test_executor.py  test_health.py  test_patterns.py  test_rate_limit.py  test_schema.py  test_tests_api.py  test_v1_api.py  test_worker.py
docs/: API_REFERENCE.md  AWT_Cost_Optimization_Plan.md  COMPARISON.md  FAQ.md  MAINTENANCE.md  QUICK_START.md  check_sync.sh
scenarios/: SC-001_register.yaml  SC-002_login.yaml  SC-003_main_nav.yaml  SC-004_logout.yaml
scenarios/examples/: SC-001_login.yaml  SC-001_register.yaml  SC-002_login.yaml  SC-003_main_nav.yaml  SC-004_logout.yaml  SC-005_validation.yaml
src/aat/: __init__.py
src/aat/adapters/: __init__.py  base.py  claude.py  ollama.py  openai_adapter.py
src/aat/cli/: main.py
src/aat/cli/commands/: analyze_cmd.py  config_cmd.py  dashboard_cmd.py  generate_cmd.py  init_cmd.py  learn_cmd.py  learned_cmd.py  loop_cmd.py  report_cmd.py  run_cmd.py  serve_cmd.py  start_cmd.py  validate_cmd.py
src/aat/core/: config.py  connection.py  events.py  exceptions.py  git_ops.py  loop.py  models.py  scenario_loader.py
src/aat/dashboard/: __init__.py  app.py  events_ws.py  subprocess_manager.py
src/aat/dashboard/static/: index.html
src/aat/engine/: __init__.py  base.py  comparator.py  desktop.py  executor.py  humanizer.py  waiter.py  web.py
src/aat/learning/: matcher.py  store.py
src/aat/matchers/: __init__.py  base.py  feature.py  hybrid.py  ocr.py  template.py  vision_ai.py
src/aat/parsers/: __init__.py  base.py  markdown_parser.py
src/aat/reporters/: __init__.py  base.py  markdown.py
test-site/: README.md  app.py  config.yaml
test-site/docs/: AWT_Demo_기획서.md  AWT_Demo_기획서_간략.md  기획서.md
test-site/scenarios/: SC-001_register.yaml  SC-002_login.yaml  SC-003_main_nav.yaml  SC-004_logout.yaml
test-site/templates/: base.html  index.html  login.html  main.html  register.html
tests/: test_abc_interfaces.py  test_config.py  test_exceptions.py  test_loop.py  test_models.py  test_scenario_loader.py
tests/integration/: test_loop_e2e.py
tests/test_adapters/: test_claude.py  test_ollama.py  test_openai.py
tests/test_cli/: test_analyze_cmd.py  test_config_cmd.py  test_generate_cmd.py  test_init_cmd.py  test_learn_cmd.py  test_loop_cmd.py  test_run_cmd.py  test_serve_cmd.py  test_start_cmd.py  test_validate_cmd.py
tests/test_core/: test_connection.py  test_events.py  test_git_ops.py
tests/test_dashboard/: test_app.py  test_events_ws.py  test_subprocess_manager.py
tests/test_engine/: test_comparator.py  test_desktop.py  test_executor.py  test_humanizer.py  test_waiter.py  test_web_engine.py
tests/test_learning/: test_matcher.py  test_store.py
tests/test_matchers/: test_feature.py  test_hybrid.py  test_ocr.py  test_template.py  test_vision_ai.py
tests/test_parsers/: test_markdown_parser.py
tests/test_reporters/: test_markdown.py
(+3 files in other folders)
